Fixed mobile overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,6 +146,7 @@ h2 {
   border-radius: 5px;
   width: 150px;
   height: 35px;
+  margin-bottom: 10px;
 }
 
 #home input[type="email"] {
@@ -154,6 +155,7 @@ h2 {
   border: 3px solid white;
   margin-right: 10px;
   width: 250px;
+  margin-bottom: 10px;
 }
 
 /* #home img {
@@ -373,6 +375,7 @@ and (min-width: 550px) {
   display: flex;
   flex-direction: row;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 #about img {
@@ -547,6 +550,15 @@ and (min-width: 550px) {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.centered-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 p {
